--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -3,9 +3,11 @@ on:
   push:
     paths-ignore:
       - 'README.md'
+      - 'LICENSE'
   pull_request:
     paths-ignore:
       - 'README.md'
+      - 'LICENSE'
 jobs:
   build:
     name: Build
