--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -5,11 +5,13 @@ on:
     # 忽略README.md
     paths-ignore:
       - 'README.md'
+      - 'LICENSE'
   # pull_request时触发workflow
   pull_request:
     # 忽略README.md
     paths-ignore:
       - 'README.md'
+      - 'LICENSE'
 jobs:
   build:
     name: Build
