--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,7 +17,10 @@ jobs:
         os: [windows-latest]
         qt_ver: [5.9.8,5.12.6]
         qt_target: [android]
-        qt_arch: [android_x86_64,android_arm64_v8a,android_x86,android_armv7]
+        qt_arch: [android_x86,android_armv7,android_arm64_v8a]
+        exclude:
+          - qt_ver: 5.9.8
+            qt_arch: android_arm64_v8a
     steps:
       - name: Install Qt
         # if: steps.cacheqt.outputs.cache-hit != 'true'
