--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -30,7 +30,7 @@ jobs:
       - name: build ios
         run: |
           export PATH=$PATH:$Qt5_Dir
-          qmake -r
+          qmake -r -spec macx-ios-clang CONFIG+=release CONFIG+=iphoneos
           make
       # - name: CacheQt
       #   uses: actions/cache@v1
