--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -22,72 +22,76 @@ jobs:
       matrix:
         qt_ver: [5.9.8,5.12.6]
         qt_target: [desktop]
-        # mingw用不了
-        # qt_arch: [win64_msvc2017_64, win32_msvc2017, win32_mingw53,win32_mingw73]
         qt_arch: [win64_msvc2017_64, win32_msvc2017]
         # 从矩阵中除外的配置
         exclude: 
           # 不存在5.9.8-win32_msvc2017的版本
           - qt_ver: 5.9.8
             qt_arch: win32_msvc2017
-          # mingw用不了
-          # - qt_ver: 5.9.8
-          #   qt_arch: win32_mingw73
-          # - qt_ver: 5.12.6
-          #   qt_arch: win32_mingw53
     # 步骤
     steps:
-      - name: showEvent
+      # - name: showEvent
+      #   env:
+      #     isTag: ${{ startsWith(github.event.ref, 'refs/tags/') }}
+      #     commitMessage: ${{ github.event.commits.message }}
+      #   shell: pwsh
+      #   run:
+      #     Write-Host $env:GITHUB_EVENT_DATA
+      # 安装Qt
+      - name: Install Qt
+        # 缓存未命中时才安装
+        if: steps.cacheqt.outputs.cache-hit != 'true'
+        # 使用外部action。这个action专门用来安装Qt
+        uses: jurplel/install-qt-action@v2.0.0
+        with:
+          # Version of Qt to install
+          version: ${{ matrix.qt_ver }}
+          # Target platform for build
+          target: ${{ matrix.qt_target }}
+          # Architecture for Windows/Android
+          arch: ${{ matrix.qt_arch }}
+      # 拉取代码
+      - uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
+      # 条件编译msvc-x64
+      - name: build-msvc-x64
+        if: contains(matrix.qt_arch,'msvc') && contains(matrix.qt_arch,'win64')
+        shell: cmd
+        run: |
+          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+          qmake
+          nmake
+      # 条件编译msvc-x86
+      - name: build-msvc-x86
+        if: contains(matrix.qt_arch,'msvc') && contains(matrix.qt_arch,'win32')
+        shell: cmd
+        run: |
+          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars32.bat"
+          qmake
+          nmake
+      # 条件缓存
+      - name: CacheQt
+        uses: actions/cache@v1
+        # cache有大小限制，单个缓存不超过400M，整个仓库的缓存不超过2G。所以这里只缓存一个特定版本。
+        if: matrix.qt_ver == '5.12.6' && matrix.qt_arch == 'win64_msvc2017_64'
+        with:
+          path: ${{ env.Qt5_Dir }}
+          key: ${{ runner.OS }}-Qt-${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
+      # 条件部署
+      - name: package
+        if: startsWith(github.event.ref, 'refs/tags/')
         env:
-          GITHUB_EVENT_DATA: ${{ toJson(github.event) }}
-        shell: pwsh
-        run:
-          Write-Host $env:GITHUB_EVENT_DATA
-      # # 安装Qt
-      # - name: Install Qt
-      #   # 缓存未命中时才安装
-      #   if: steps.cacheqt.outputs.cache-hit != 'true'
-      #   # 使用外部action。这个action专门用来安装Qt
-      #   uses: jurplel/install-qt-action@v2.0.0
-      #   with:
-      #     # Version of Qt to install
-      #     version: ${{ matrix.qt_ver }}
-      #     # Target platform for build
-      #     target: ${{ matrix.qt_target }}
-      #     # Architecture for Windows/Android
-      #     arch: ${{ matrix.qt_arch }}
-      # # 拉取代码
-      # - uses: actions/checkout@v1
-      #   with:
-      #     fetch-depth: 1
-      # # 条件编译msvc-x64
-      # - name: build-msvc-x64
-      #   if: contains(matrix.qt_arch,'msvc') && contains(matrix.qt_arch,'win64')
-      #   shell: cmd
-      #   run: |
-      #     call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-      #     qmake
-      #     nmake
-      # # 条件编译msvc-x86
-      # - name: build-msvc-x86
-      #   if: contains(matrix.qt_arch,'msvc') && contains(matrix.qt_arch,'win32')
-      #   shell: cmd
-      #   run: |
-      #     call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars32.bat"
-      #     qmake
-      #     nmake
-      # # 条件编译mingw(用不了)
-      # - name: build-mingw
-      #   if: contains(matrix.qt_arch,'mingw')
-      #   shell: cmd
-      #   run: |
-      #     qmake
-      #     mingw32-make
-      # # 条件缓存
-      # - name: CacheQt
-      #   uses: actions/cache@v1
-      #   # cache有大小限制，单个缓存不超过400M，整个仓库的缓存不超过2G。所以这里只缓存一个特定版本。
-      #   if: matrix.qt_ver == '5.12.6' && matrix.qt_arch == 'win64_msvc2017_64'
-      #   with:
-      #     path: ${{ env.Qt5_Dir }}
-      #     key: ${{ runner.OS }}-Qt-${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
+          packageName: Windows-${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
+        shell: cmd
+        run: |
+          mkdir %packageName%
+          copy /y bin\HelloActions-qt %packageName%\
+          windeployqt --qmldir . %packageName%\HelloActions-qt
+      - name: upload
+        if: startsWith(github.event.ref, 'refs/tags/')
+        uses: actions/upload-artifact@v1.0.0
+        with:
+          name: Windows-${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
+          path: Windows-${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
+      
