--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -32,12 +32,12 @@ jobs:
             qt_arch: win32_msvc2017
     # 步骤
     steps:
-      - name: showEvent
-        env:
-          GITHUB_EVENT_DATA: ${{ toJson(github.event) }}
-        shell: pwsh
-        run:
-          Write-Host $env:GITHUB_EVENT_DATA
+      # - name: showEvent
+      #   env:
+      #     GITHUB_EVENT_DATA: ${{ toJson(github.event) }}
+      #   shell: pwsh
+      #   run:
+      #     Write-Host $env:GITHUB_EVENT_DATA
       # 安装Qt
       - name: Install Qt
         # 缓存未命中时才安装
@@ -79,7 +79,7 @@ jobs:
         with:
           path: ${{ env.Qt5_Dir }}
           key: ${{ runner.OS }}-Qt-${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
-      # 条件部署
+      # tag打包
       - name: package
         if: startsWith(github.event.ref, 'refs/tags/')
         env:
@@ -90,15 +90,30 @@ jobs:
           mkdir %packageName%
           xcopy /y bin\HelloActions-Qt.exe %packageName%\
           windeployqt --qmldir . %packageName%\HelloActions-Qt.exe
-      # - name: createRelease
-      #   if: startsWith(github.event.ref, 'refs/tags/')
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   uses: actions/upload-artifact@v1.0.0
-      #   with:
-      #     tag_name: 
-      # - name: uploadRelease
-      #   if: startsWith(github.event.ref, 'refs/tags/')
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   uses: actions/upload-artifact@v1.0.0
+          zip --junk-paths %packageName%
+      # tag 创建Release
+      - name: createRelease
+        id: create_release
+        if: startsWith(github.event.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: actions/create-release@v1.0.0
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: ${{ github.event.head_commit.message }}
+          draft: false
+          prerelease: false
+      # tag 上传Release
+      - name: uploadRelease
+        if: startsWith(github.event.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          packageName: Windows-${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
+        uses: actions/upload-release-asset@v1.0.1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./$${packageName}.zip
+          asset_name: $${packageName}.zip
+          asset_content_type: application/zip
+
