--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -97,7 +97,7 @@ jobs:
           packageName: Windows-${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
         uses: thedoctor0/zip-release@master
         with:
-          filename: '${{packageName}}.zip'
+          filename: ${{packageName}}.zip
           path: ${{packageName}}
       # tag 创建Release
       - name: createRelease
