--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -121,7 +121,7 @@ jobs:
         uses: actions/upload-release-asset@v1.0.1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: './${{ steps.uploadRelease.env.packageName }}.zip'
-          asset_name: '${{ steps.uploadRelease.env.packageName }}.zip'
+          asset_path: ./${{ steps.uploadRelease.env.packageName }}.zip
+          asset_name: ${{ steps.uploadRelease.env.packageName }}.zip
           asset_content_type: application/zip
 
