--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -32,12 +32,6 @@ jobs:
             qt_arch: win32_msvc2017
     # 步骤
     steps:
-      # - name: showEvent
-      #   env:
-      #     GITHUB_EVENT_DATA: ${{ toJson(github.event) }}
-      #   shell: pwsh
-      #   run:
-      #     Write-Host $env:GITHUB_EVENT_DATA
       # 安装Qt
       - name: Install Qt
         # 缓存未命中时才安装
@@ -73,17 +67,26 @@ jobs:
           nmake
       # 条件缓存
       - name: CacheQt
+        id: cacheqt
         uses: actions/cache@v1
         # cache有大小限制，单个缓存不超过400M，整个仓库的缓存不超过2G。所以这里只缓存一个特定版本。
         if: matrix.qt_ver == '5.12.6' && matrix.qt_arch == 'win64_msvc2017_64'
         with:
           path: ${{ env.Qt5_Dir }}
           key: ${{ runner.OS }}-Qt-${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
+      # 设置后续step通用的环境变量
+      - name: setEnv
+        if: startsWith(github.event.ref, 'refs/tags/')
+        env:
+          packageName: Windows-${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
+        shell: pwsh
+        run: |
+          # actions 特殊语法
+          echo ::set-env name=packageName::$env:packageName
       # tag部署
       - name: package
         if: startsWith(github.event.ref, 'refs/tags/')
         env:
-          packageName: Windows-${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
           VCINSTALLDIR: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC'
         shell: cmd
         run: |
@@ -93,8 +96,6 @@ jobs:
       # 打包
       - name: CompressArchive
         if: startsWith(github.event.ref, 'refs/tags/')
-        env:
-          packageName: Windows-${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
         shell: pwsh
         run: |
           Compress-Archive -Path $env:packageName $env:packageName'.zip'
@@ -104,7 +105,6 @@ jobs:
         if: startsWith(github.event.ref, 'refs/tags/')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          packageName: Windows-${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
         uses: actions/create-release@v1.0.0
         with:
           tag_name: ${{ github.ref }}
@@ -122,6 +122,6 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./
-          asset_name: ${{ steps.create_release.env.packageName }}.zip
+          asset_name: ${{ env.packageName }}.zip
           asset_content_type: application/zip
 
