--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -78,17 +78,18 @@ jobs:
       - name: setEnv
         if: startsWith(github.event.ref, 'refs/tags/')
         env:
-          packageInfo: Windows-${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
+          packageInfo: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
         shell: pwsh
         run: |
           # actions 特殊语法
-          echo ::set-env name=packageName::$env:packageInfo
+          $info = $env:packageInfo
+          echo ::set-env name=packageName::$info
       # tag部署
       - name: package
         if: startsWith(github.event.ref, 'refs/tags/')
         env:
           VCINSTALLDIR: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC'
-        shell: cmd
+        shell: pwsh
         run: |
           mkdir %packageName%
           xcopy /y bin\HelloActions-Qt.exe %packageName%\
