--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -91,9 +91,9 @@ jobs:
           VCINSTALLDIR: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC'
         shell: pwsh
         run: |
-          mkdir %packageName%
-          xcopy /y bin\HelloActions-Qt.exe %packageName%\
-          windeployqt --qmldir . %packageName%\HelloActions-Qt.exe
+          New-Item -ItemType Directory $env:packageName
+          Copy-Item bin\HelloActions-Qt.exe $env:packageName\
+          windeployqt --qmldir . $env:packageName\HelloActions-Qt.exe
       # 打包
       - name: CompressArchive
         if: startsWith(github.event.ref, 'refs/tags/')
