--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -82,7 +82,8 @@ jobs:
         shell: pwsh
         run: |
           # actions 特殊语法
-          echo ::set-env name=packageName::${env:packageInfo}
+          echo ::set-env name=packageName::'${env:packageInfo}'
+          Write-Host $env:packageName
       # tag部署
       - name: package
         if: startsWith(github.event.ref, 'refs/tags/')
