--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -79,7 +79,7 @@ jobs:
         if: startsWith(github.event.ref, 'refs/tags/')
         shell: pwsh
         env:
-          packageInfo:  ${{ matrix.qt_ver }-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
+          packageInfo: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
         run: |
           # actions 特殊语法
           echo ::set-env name=packageName::${env:packageInfo}
