--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -20,11 +20,9 @@ jobs:
     strategy:
       # 矩阵配置
       matrix:
-        # qt_ver: [5.9.8,5.12.6]
-        qt_ver: [5.12.6]
+        qt_ver: [5.9.8,5.12.6]
         qt_target: [desktop]
-        # qt_arch: [win64_msvc2017_64, win32_msvc2017]
-        qt_arch: [win64_msvc2017_64]
+        qt_arch: [win64_msvc2017_64, win32_msvc2017]
         # 从矩阵中除外的配置
         exclude: 
           # 不存在5.9.8-win32_msvc2017的版本
