--- a/.github/workflows/QtCI.yml
+++ b/.github/workflows/QtCI.yml
@@ -14,7 +14,7 @@ on:
       - 'LICENSE'
 jobs:
   windowsBuildJob:
-    name: windowsBuildJob
+    name: windows
     # 运行平台， windows-latest目前是windows server 2019
     runs-on: windows-latest
     strategy:
@@ -92,8 +92,8 @@ jobs:
         with:
           name: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
           path: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}.zip
-  linuxBuildJob:
-    name: linuxBuild
+  ubuntuBuildJob:
+    name: ubuntu
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -108,7 +108,7 @@ jobs:
         uses: actions/cache@v1
         if: matrix.qt_ver == '5.12.6'
         with:
-          path: ${{ env.Qt5_Dir }}
+          path: Qt/${{ matrix.qt_ver }}
           key: ${{ runner.OS }}-Qt-${{ matrix.qt_ver }}
       - name: Install Qt
         if: steps.cacheqt.outputs.cache-hit != 'true'
@@ -123,7 +123,7 @@ jobs:
           qmake
           make
   macosBuildJob:
-    name: macosBuild
+    name: macos
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -138,7 +138,7 @@ jobs:
         uses: actions/cache@v1
         if: matrix.qt_ver == '5.12.6'
         with:
-          path: ${{ env.Qt5_Dir }}
+          path: Qt/${{ matrix.qt_ver }}
           key: ${{ runner.OS }}-Qt-${{ matrix.qt_ver }}
       - name: Install Qt
         if: steps.cacheqt.outputs.cache-hit != 'true'
@@ -151,7 +151,7 @@ jobs:
           qmake
           make
   iosBuildJob:
-    name: iosBuild
+    name: ios
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -173,7 +173,7 @@ jobs:
           qmake -r -spec macx-ios-clang CONFIG+=release CONFIG+=iphoneos
           make
   androidBuildJob:
-    name: androidBuild
+    name: android
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
