--- a/.github/workflows/QtCI.yml
+++ b/.github/workflows/QtCI.yml
@@ -41,7 +41,7 @@ jobs:
         # cache有大小限制，单个缓存不超过400M，整个仓库的缓存不超过2G。所以这里只缓存一个特定版本。
         if: matrix.qt_ver == '5.12.6' && matrix.qt_arch == 'win64_msvc2017_64'
         with:
-          path: ${{ env.Qt5_Dir }}
+          path: Qt/${{ matrix.qt_ver }}
           key: ${{ runner.OS }}-Qt-${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
       # 安装Qt
       - name: Install Qt
