--- a/.github/workflows/QtCI.yml
+++ b/.github/workflows/QtCI.yml
@@ -41,7 +41,7 @@ jobs:
         # cache有大小限制，单个缓存不超过400M，整个仓库的缓存不超过2G。所以这里只缓存一个特定版本。
         if: matrix.qt_ver == '5.12.6' && matrix.qt_arch == 'win64_msvc2017_64'
         with:
-          path: Qt/${{ matrix.qt_ver }}/${{ matrix.qt_arch }}
+          path: Qt/${{ matrix.qt_ver }}/msvc2017_64
           key: ${{ runner.OS }}-Qt-${{ matrix.qt_ver }}-${{ matrix.qt_arch }}
       # 安装Qt
       - name: Install Qt
@@ -84,13 +84,65 @@ jobs:
           New-Item -ItemType Directory ${env:packageName}
           Copy-Item bin\HelloActions-Qt.exe ${env:packageName}\
           windeployqt --qmldir . ${env:packageName}\HelloActions-Qt.exe
-      # tag存储
-      - name: uploadArtifact
+      # # tag存储
+      # - name: uploadArtifact
+      #   if: startsWith(github.event.ref, 'refs/tags/')
+      #   uses: actions/upload-artifact@v1
+      #   with:
+      #     name: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
+      #     path: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}.zip
+      # 设置后续step通用的环境变量
+      - name: setEnv
         if: startsWith(github.event.ref, 'refs/tags/')
-        uses: actions/upload-artifact@v1
+        shell: pwsh
+        env:
+          packageInfo: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
+        run: |
+          $PACKAGE_INFO = ${env:packageInfo}
+          # actions 特殊语法
+          echo "::set-env name=packageName::$PACKAGE_INFO"
+          Write-Host 'packageName:'${env:packageName}
+      # tag部署
+      - name: package
+        if: startsWith(github.event.ref, 'refs/tags/')
+        env:
+          VCINSTALLDIR: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC'
+        shell: pwsh
+        run: |
+          New-Item -ItemType Directory ${env:packageName}
+          Copy-Item bin\HelloActions-Qt.exe ${env:packageName}\
+          windeployqt --qmldir . ${env:packageName}\HelloActions-Qt.exe
+      # 打包
+      - name: CompressArchive
+        if: startsWith(github.event.ref, 'refs/tags/')
+        shell: pwsh
+        run: |
+          Compress-Archive -Path ${env:packageName} ${env:packageName}'.zip'
+      # tag 创建Release
+      - name: createRelease
+        id: createRelease
+        if: startsWith(github.event.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: actions/create-release@v1.0.0
         with:
-          name: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
-          path: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}.zip
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: ${{ github.event.head_commit.message }}
+          draft: false
+          prerelease: false
+      # tag 上传Release
+      - name: uploadRelease
+        id: uploadRelease
+        if: startsWith(github.event.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: actions/upload-release-asset@v1.0.1
+        with:
+          upload_url: ${{ steps.createRelease.outputs.upload_url }}
+          asset_path: ./${{ env.packageName }}.zip
+          asset_name: ${{ env.packageName }}.zip
+          asset_content_type: application/zip
   ubuntuBuildJob:
     name: ubuntu
     runs-on: ${{ matrix.os }}
@@ -207,57 +259,5 @@ jobs:
   #   name: release
   #   runs-on: windows-latest
   #   need: [windowsBuildJob]
-  #   steps:
-  #     # 设置后续step通用的环境变量
-  #     - name: setEnv
-  #       if: startsWith(github.event.ref, 'refs/tags/')
-  #       shell: pwsh
-  #       env:
-  #         packageInfo: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
-  #       run: |
-  #         $PACKAGE_INFO = ${env:packageInfo}
-  #         # actions 特殊语法
-  #         echo "::set-env name=packageName::$PACKAGE_INFO"
-  #         Write-Host 'packageName:'${env:packageName}
-  #     # tag部署
-  #     - name: package
-  #       if: startsWith(github.event.ref, 'refs/tags/')
-  #       env:
-  #         VCINSTALLDIR: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC'
-  #       shell: pwsh
-  #       run: |
-  #         New-Item -ItemType Directory ${env:packageName}
-  #         Copy-Item bin\HelloActions-Qt.exe ${env:packageName}\
-  #         windeployqt --qmldir . ${env:packageName}\HelloActions-Qt.exe
-  #     # 打包
-  #     - name: CompressArchive
-  #       if: startsWith(github.event.ref, 'refs/tags/')
-  #       shell: pwsh
-  #       run: |
-  #         Compress-Archive -Path ${env:packageName} ${env:packageName}'.zip'
-  #     # tag 创建Release
-  #     - name: createRelease
-  #       id: createRelease
-  #       if: startsWith(github.event.ref, 'refs/tags/')
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #       uses: actions/create-release@v1.0.0
-  #       with:
-  #         tag_name: ${{ github.ref }}
-  #         release_name: Release ${{ github.ref }}
-  #         body: ${{ github.event.head_commit.message }}
-  #         draft: false
-  #         prerelease: false
-  #     # tag 上传Release
-  #     - name: uploadRelease
-  #       id: uploadRelease
-  #       if: startsWith(github.event.ref, 'refs/tags/')
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #       uses: actions/upload-release-asset@v1.0.1
-  #       with:
-  #         upload_url: ${{ steps.createRelease.outputs.upload_url }}
-  #         asset_path: ./${{ env.packageName }}.zip
-  #         asset_name: ${{ env.packageName }}.zip
-  #         asset_content_type: application/zip
+
 
