update msvc build

--- a/.github/workflows/QtCI.yml
+++ b/.github/workflows/QtCI.yml
@@ -28,6 +28,12 @@ jobs:
           # 不存在5.9.8-win32_msvc2017的版本
           - qt_ver: 5.9.8
             qt_arch: win32_msvc2017
+        # 额外配置
+        include:
+          - qt_arch: win64_msvc2017_64
+            vs_arch: x64
+          - qt_arch: win32_msvc2017
+            vs_arch: x86
     # 步骤
     steps:
       # 条件缓存 (这里是恢复缓存。steps的最后会自动追加一个PostCatch，用来存储)
@@ -37,41 +43,26 @@ jobs:
         # cache有大小限制，单个缓存不超过400M，整个仓库的缓存不超过2G。所以这里只缓存一个特定版本。
         if: matrix.qt_ver == '5.12.6' && matrix.qt_arch == 'win64_msvc2017_64'
         with:
-          path: ${{ env.RUNNER_WORKSPACE }}/Qt/${{ matrix.qt_ver }}/msvc2017_64
+          path: Qt/${{ matrix.qt_ver }}/msvc2017_64
           key: Qt-${{ matrix.qt_ver }}-${{ matrix.qt_arch }}-${{ runner.OS }}
       # 拉取代码
       - uses: actions/checkout@v1
         with:
           fetch-depth: 1
-
       # 安装Qt
       - name: Install Qt
         # 缓存未命中时才安装
         if: steps.cacheqt.outputs.cache-hit != 'true'
-        # 使用外部action。这个action专门用来安装Qt
         uses: jurplel/install-qt-action@v2.0.0
         with:
-          # Version of Qt to install
           version: ${{ matrix.qt_ver }}
-          # Target platform for build
           target: ${{ matrix.qt_target }}
-          # Architecture for Windows/Android
           arch: ${{ matrix.qt_arch }}
-
-      # 条件编译msvc-x64
-      - name: build-msvc-x64
-        if: contains(matrix.qt_arch,'msvc') && contains(matrix.qt_arch,'win64')
+      # 条件编译msvc
+      - name: build-msvc
         shell: cmd
         run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-          qmake
-          nmake
-      # 条件编译msvc-x86
-      - name: build-msvc-x86
-        if: contains(matrix.qt_arch,'msvc') && contains(matrix.qt_arch,'win32')
-        shell: cmd
-        run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars32.bat"
+          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vs_arch%
           qmake
           nmake
       # # tag打包
@@ -157,7 +148,7 @@ jobs:
         uses: actions/cache@v1
         if: matrix.qt_ver == '5.12.6'
         with:
-          path: ${{ env.RUNNER_WORKSPACE }}/Qt/${{ matrix.qt_ver }}
+          path: ${{ RUNNER_WORKSPACE }}/Qt/${{ matrix.qt_ver }}
           key: Qt-${{ matrix.qt_ver }}-${{ runner.OS }}
       - uses: actions/checkout@v1
         with:
@@ -187,7 +178,7 @@ jobs:
         uses: actions/cache@v1
         if: matrix.qt_ver == '5.12.6'
         with:
-          path: ${{ env.RUNNER_WORKSPACE }}/Qt/${{ matrix.qt_ver }}
+          path: ${{ RUNNER_WORKSPACE }}/Qt/${{ matrix.qt_ver }}
           key: Qt-${{ matrix.qt_ver }}-${{ runner.OS }}
       - uses: actions/checkout@v1
         with:
